[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-write"
version = "1.0.0"
description = "Crash-safe atomic file writer using temp-file + fsync + rename pattern"
requires-python = ">=3.8"

[project.scripts]
atomic-write = "atomic_file:main"

[tool.setuptools]
py-modules = ["atomic_file"]
